// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilteredAppsFromSearch library should filter correctly on doctype 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
]
`;

exports[`getFilteredAppsFromSearch library should filter correctly on type 1`] = `
Array [
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Collect",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://collect.cozy.mock/",
    "slug": "collect",
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0",
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "others",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "locales": Object {
      "name": "For Dev Only",
    },
    "name": "DevOnly",
    "slug": "devonly",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [],
      "dev": Array [
        "1.0.0-betaojdkehy989ekhflldh",
      ],
      "stable": Array [],
    },
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "installed": true,
    "name": "Drive",
    "name_prefix": "Cozy",
    "permissions": Object {
      "mock2": Object {
        "type": "io.mock.doctype2",
      },
    },
    "related": "http://drive.cozy.mock/",
    "slug": "drive",
    "type": "webapp",
    "uninstallable": false,
    "version": "3.0.0-beta89bnhj3993",
  },
  Object {
    "categories": Array [
      "cozy",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "editor": "Cozy",
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Photos",
    "name_prefix": "Cozy",
    "slug": "photos",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "3.0.0",
      ],
      "dev": Array [
        "3.0.0",
      ],
      "stable": Array [
        "3.0.0",
      ],
    },
  },
  Object {
    "categories": Array [
      "partners",
    ],
    "icon": "<svg></svg>",
    "isInRegistry": true,
    "name": "Tasky",
    "slug": "tasky",
    "type": "webapp",
    "uninstallable": true,
    "versions": Object {
      "beta": Array [
        "1.0.0",
      ],
      "dev": Array [
        "1.0.0",
      ],
      "stable": Array [
        "1.0.0",
      ],
    },
  },
]
`;

exports[`getFilteredAppsFromSearch library should filter correctly type AND doctype 1`] = `
Array [
  Object {
    "categories": Array [
      "transport",
    ],
    "developer": Object {
      "name": "Cozy",
    },
    "icon": "<svg></svg>",
    "installed": true,
    "isInRegistry": true,
    "name": "Trinlane",
    "permissions": Object {
      "mock": Object {
        "type": "io.mock.doctype",
      },
    },
    "slug": "konnector-trinlane",
    "type": "konnector",
    "uninstallable": true,
    "version": "0.1.0",
    "versions": Object {
      "beta": Array [
        "0.1.0",
      ],
      "dev": Array [
        "0.1.0",
      ],
      "stable": Array [
        "0.1.0",
      ],
    },
  },
]
`;
